force-app/main/default/objects/Contrato__c/Contrato__c.object-meta.xml
<CustomObject>
    <label>Contrato</label>
    <nameField>
        <displayFormat>CTR-{0000}</displayFormat>
        <label>Contrato Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contratos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>