force-app/main/default/objects/Contrato__c/fields/Data_de_Expiracao__c.field-meta.xml
<CustomField>
    <fullName>Data_de_Expiracao__c</fullName>
    <label>Data de Expiracao</label>
    <type>Date</type>
</CustomField>