force-app/main/default/objects/Contrato__c/fields/Detalhes__c.field-meta.xml
<CustomField>
    <fullName>Detalhes__c</fullName>
    <label>Detalhes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>