force-app/main/default/objects/Contrato__c/fields/Produto__c.field-meta.xml
<CustomField>
    <fullName>Produto__c</fullName>
    <label>Produto</label>
    <length>60</length>
    <type>Text</type>
</CustomField>